--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wx2-react",
-  "version": "1.0.15",
+  "name": "wx2-npmtest001",
+  "version": "1.0.1",
   "description": "Simple framework to react productivity",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
