secure api key set test 005

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script:
     - npm run build    
 deploy: 
     provider: npm
-    email: "fernandomatosprogrammer@gmail.com"
+    email: $API_ACCOUNT
     api_key: $API_KEY
