--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script:    
     - npm run build    
 deploy: 
+    if: branch = master
     provider: npm
     email: $API_ACCOUNT
     api_key: $API_KEY
