--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "react",
     "declaration": true,    
     "emitDeclarationOnly": true,
-    "declarationDir": "dist",
+    "declarationDir": "",
   },
   "include": [
     "src" // <-- change this to where your source files are
