--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "wx2-npmtest001",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Simple framework to react productivity",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo 1",
     "tsc": "tsc",
-    "build": "npm run tsc & babel src --out-dir . --extensions .ts,.tsx",
+    "build": "npm run tsc & babel src --out-dir dist --extensions .ts,.tsx",
     "npm:publish": "npm run build & npm publish"
   },
   "repository": {
