--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "wx2-npmtest001",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "Simple framework to react productivity",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "./dist/**/*"
+  ],
   "scripts": {
     "test": "echo 1",
     "tsc": "tsc",
