--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 node_js: 
     - "12"
-install:
+before_script:
     - npm i
 script:    
     - npm run build    
 deploy: 
     provider: npm
+    skip_cleanup: true
     email: $API_ACCOUNT
     api_key: $API_KEY
     on:
